# LLM-Scrapping-Banks-Web

./: .gitignore  README.md  pyproject.toml
data/: competitor_sites.json
docs/: jiraai-llm-scraping-workflow.mermaid
notebooks/: competitor_sites.json  demoLLMScrapping.ipynb
src/: app.py
src/features/: content_processor.py  evaluation.py  scraper.py
src/models/: openai_handler.py
src/utils/: competitor_sites.py  loggingDecorator.py  token_cost_calculator.py
